fix bag of align

--- a/web_app/ezShop/src/pages/OrderPage/OrderPage.module.scss
+++ b/web_app/ezShop/src/pages/OrderPage/OrderPage.module.scss
@@ -107,6 +107,7 @@
     right: 0;
     left: 0;
     height: 62px;
+    line-height: 62px;
     background-color: $accent-color;
     text-align: center;
     align-content: center;
